# OrdinalArchetypalAnalysis

./: .gitignore  AAM.py  CAA_class.py  DF_ALL_RESULTS_BACKUP.csv  LICENSE  OAA_class.py  OAA_class_adj.py  OAA_class_old.py  RBOAA_class.py  RBOAA_class_adj.py  RBOAA_class_old.py  README.md  TESTING_ENV.py  TESTING_ENV2.py  TSAA_class.py  demo.ipynb  error hpc nan i normal distribution.txt  eval_measures.py  get_results.py  main.py  playground.ipynb  playground_Emilie.ipynb  pyproject.toml  real_data_plots.ipynb  real_data_plots_Emilie.ipynb  real_data_plots_michael.ipynb  requirements.txt  result_helper_function.py  results_playground.ipynb  synthPlotsForPaper.ipynb  test_env.py  test_env2.py  test_new_env.py  test_old_env.py
50_respondents/: X.npy  data_parameters.json
RealData/: GB_data.npy  GB_data_corrupted.npz  testBernoulli.sh
RealData/OSM/: BIC_GB.csv  GB_OSM.csv  GB_OSM_workspace.RData  GB_data_OSM_corrupted.csv
SyntheticData/: TSOAA_data_small_naive.csv  synthetic_data_naive.pkl  synthetic_data_naive_large.pkl  synthetic_data_naive_small.pkl
SyntheticData/1000_respodents_complex/: A.npy  data_parameters.json
SyntheticData/1000_respondents/: Data_naive_large.npy  Data_naive_large_corrupted.npz  X.npy  data_parameters.json
SyntheticData/RB_100Q/: X.npy  (+4 more)
TSAA_data/: .Rhistory  TSAA_ordinalgmifs.R
configs/: ESS8_config.yaml  config.yaml  synthetic_config.yaml
deprecated/: TSAA_NEWEST.py  TSAA_class.py
src/: AAM.py
synthetic_results/: 1000_all_combinations.json  50_all_combinations.json  SyntheticPlotsForMeeting.ipynb
toBeAdded/: corruptData.py
(+102 files in other folders)
